# pycades

./: CMakeLists.txt  Dockerfile  LICENSE  Makefile  PyEnrollContainerKey.cpp  noxfile.py  sample_enum_containers.py
.devcontainer/: Dockerfile
.github/workflows/: develop.yml  release.yml
doc/: pycades-build.md
docs/: pycades-build.md  pycades-install.md  pycades.md
src/: CMakeLists.txt
src/ext/: PyCades.cpp
src/pycades/: __init__.py
tests/: requirements.txt  test_dummy.py
